[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "scivis"
description = "A Python package for scientific plots based on matplotlib."
readme = "README.md"
version = "0.0.1"
requires-python = ">= 3.12"
authors = [
    { name = "Davis Stöwer", email = "s242864@dtu.dk" }
]

dependencies = [
    "numpy>2.2",
	"matplotlib>3.10",
]
license = {file = "LICENSE"}

[project.urls]
Repository = ""
